HelloUltraviolet/Fixtures/RejectedSource/Expressions/ExprUnresolved/Expected.uv
//! Expected diagnostic metadata for the ExprUnresolved rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "rule.16.Expr-Unresolved-Err")
